# onca-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  onca.exe.manifest  ral.toml  rust-toolchain.toml
crates/onca_common/: Cargo.toml
crates/onca_common/benches/: bench.rs  dynarr.rs  hash.rs
crates/onca_common/src/: borrow.rs  bytes.rs  dynlib.rs  event_listener.rs  fmt.rs  guid.rs  index_handle.rs  io.rs  lib.rs  libonca_common.natvis  prelude.rs  sync.rs  utils.rs
crates/onca_common/src/alloc/: mod.rs
crates/onca_common/src/alloc/composable/: expandable_allocator.rs  mod.rs  segregator_allocator.rs
crates/onca_common/src/alloc/primitives/: bitmap_allocator.rs  freelist_allocator.rs  mallocator.rs  mod.rs  stack_allocator.rs
crates/onca_common/src/collections/: bitset.rs  dynarr.rs  mod.rs
crates/onca_common/src/collections/dynarr/: drain.rs  extract_if.rs  in_place_collect.rs  in_place_drop.rs  into_iter.rs  is_zero.rs  spec.rs  splice.rs  tests.rs  to_dynarr.rs
crates/onca_common/src/collections/imp/: array.rs  mod.rs
crates/onca_common/src/hashing/: md5.rs  mod.rs  sha1.rs
crates/onca_common/src/mem/: alloc_storage.rs  inline_storage.rs  mem_tag.rs  memory_manager.rs  mod.rs  storage.rs
crates/onca_common/src/mem/storage/: sliced_handle.rs  sliced_single_handle.rs  typed_handle.rs  typed_metadata.rs  typed_single_handle.rs  unique_handle.rs  unique_single_handle.rs  wrappers.rs
crates/onca_common/src/os/: mod.rs
crates/onca_common/src/os/windows/: dynlib.rs  misc.rs  mod.rs  sync.rs  sys_info.rs  time.rs
crates/onca_common/src/strings/: interned_string.rs  mod.rs  string.rs
crates/onca_common/src/sys/: arch.rs  info.rs  mod.rs  thread_id.rs
crates/onca_common/src/sys/arch/: x86_64.rs
crates/onca_core/: Cargo.toml
crates/onca_core/src/: bytes.rs  dynlib.rs  event_listener.rs  io.rs  lib.rs  libonca_core.natvis  prelude.rs  time.rs  utils.rs
crates/onca_core/src/alloc/: alloc.rs  allocation.rs  layout.rs  mem_tag.rs  mod.rs  pointer.rs
crates/onca_core/src/alloc/composable/: expandable_allocator.rs  fallback_allocator.rs  mod.rs  segregator_allocator.rs
crates/onca_core/src/alloc/primitives/: bitmap_allocator.rs  freelist_allocator.rs  linear_allocator.rs  mallocator.rs  pool_allocator.rs  stack_allocator.rs
crates/onca_core/src/collections/: bitset.rs  btree_map.rs  btree_set.rs  byte_buffer.rs  callback_array.rs  collections_alloc.rs  dyn_array.rs  hash_map.rs  hash_set.rs  linked_list.rs  mod.rs  small_dyn_array.rs  static_dyn_array.rs  vec_deque.rs
crates/onca_core/src/collections/imp/: dyn_array.rs  mod.rs
crates/onca_core/src/hashing/: fnv.rs  mod.rs
crates/onca_core/src/io/: async_io.rs  copy.rs  cursor.rs  error.rs  impls.rs  mod.rs  prelude.rs  readbuf.rs  utils.rs
crates/onca_core/src/io/buffered/: bufreader.rs  bufwriter.rs  linewriter.rs  linewritershim.rs  mod.rs
crates/onca_core/src/mem/: arc.rs  heap_ptr.rs  memory_manager.rs  mod.rs  rc.rs  unique.rs
crates/onca_core/src/os/: mod.rs
crates/onca_core/src/os/windows/: dynlib.rs  mod.rs  sync.rs  thread.rs  time.rs
crates/onca_core/src/strings/: interned_string.rs  mod.rs  str_extensions.rs  string.rs
crates/onca_core/src/sync/: common.rs  condvar.rs  elision.rs  fair_mutex.rs  mod.rs  mutex.rs  once.rs  raw_fair_mutex.rs  raw_mutex.rs  raw_rwlock.rs  remutex.rs  rwlock.rs
crates/onca_core/src/sys/: mod.rs
crates/onca_fs/: Cargo.toml
crates/onca_fs/src/: directory.rs  drive_volume.rs  entry.rs  file.rs  file_watcher.rs  lib.rs  libonca_fs.natvis  link.rs  metadata.rs  path.rs  vfs.rs
crates/onca_fs/src/os/: mod.rs
crates/onca_fs/src/os/windows/: mod.rs  (+7 more)
crates/onca_hid/: Cargo.toml  build.rs
crates/onca_hid/src/: hid.generated.rs  hid_usages.rs  lib.rs  usb.ids  vendor_device.rs
crates/onca_hid/src/os/: mod.rs
crates/onca_input/: Cargo.toml  input_devices.toml
crates/onca_input/src/: control_scheme.rs  input_manager.rs  input_mapping.rs  lib.rs  user.rs
crates/onca_input/src/input_devices/: definitions.rs  dualsense.rs  gamepad.rs  generic.rs  keyboard.rs  mod.rs  mouse.rs
crates/onca_input/src/os/: mod.rs
crates/onca_logging/: Cargo.toml
crates/onca_logging/src/: lib.rs
crates/onca_ral/: Cargo.toml  NOTES.md  README.md  formats.md  requirements.md
crates/onca_ral/src/: api.rs  buffer.rs  command_list.rs  command_queue.rs  common.rs  constants.rs  descriptor.rs  device.rs  fence.rs  handle.rs  lib.rs  libonca_ral.natvis  memory.rs  physical_device.rs  pipeline.rs  ral.rs  renderpass.rs  result.rs  sampler.rs  shader.rs  swap_chain.rs  texture.rs
crates/onca_ral/src/common/: format.rs  mem_align.rs  vertex_format.rs
crates/onca_ral_dx12/: Cargo.toml  README.md  requirements.md
crates/onca_ral_dx12/src/: buffer.rs  command_list.rs  command_queue.rs  debug.rs  descriptors.rs  device.rs  dx12_ral.rs  dx12_types.rs  fence.rs  lib.rs  luts.rs  memory.rs  physical_device.rs  pipeline.rs  sampler.rs  shader.rs  swap_chain.rs  texture.rs  utils.rs
crates/onca_ral_vulkan/: Cargo.toml  build.rs  readme.md  requirements.md
crates/onca_ral_vulkan/src/: buffer.rs  command_list.rs  command_queue.rs  constants.rs  descriptor.rs  device.rs  fence.rs  instance.rs  lib.rs  luts.rs  memory.rs  physical_device.rs  pipeline.rs  sampler.rs  shader.rs  swap_chain.rs  texture.rs  utils.rs  vulkan_ral.rs
crates/onca_ral_vulkan/src/vulkan/: allocation.rs  cpu_allocation.rs  debug.rs  mod.rs  structures.rs
crates/onca_simd/: Cargo.toml
crates/onca_simd/src/: float.rs  int.rs  lanes.rs  lib.rs  mask.rs  simd.rs  uint.rs
crates/onca_simd/src/backend/: mod.rs
crates/onca_simd/src/mask/: bitmask.rs  full_mask.rs  to_bitmask.rs
crates/onca_simd/tests/: arith.rs  cmp.rs  convert.rs
crates/onca_terminal/: Cargo.toml
crates/onca_terminal/src/: escape_codes.rs  lib.rs
crates/onca_unicode_info/: Cargo.toml  build.rs
crates/onca_unicode_info/src/: lib.rs
crates/onca_window/: Cargo.toml
crates/onca_window/src/: icon.rs  lib.rs  monitor.rs  window.rs  window_manager.rs  window_settings.rs
crates/onca_window/src/os/: mod.rs
(+138 files in other folders)
