[package]
name = "onca"
version = "0.1.0"
edition = "2021"
authors = [ "TheJelmega" ]
description = "Game engine in rust"
readme = "readme.md"
repository = "https://github.com/TheJelmega/onca-rs"
license = "Apache 2.0"
keywords = [ "gamedev", "graphics", "engine", "game", "onca" ]
categories = ["game-engines", "graphics", "gui", "rendering"]

# temporary
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [ "crates/*" ]

[dependencies]
onca_simd_macros = { path = "crates/onca_simd_macros" }
onca_simd = { path = "crates/onca_simd" }
onca_math = { path = "crates/onca_math" }
onca_core_macros = { path = "crates/onca_core_macros" }
onca_core = { path = "crates/onca_core" }
onca_fs = { path = "crates/onca_fs" }
onca_terminal = { path = "crates/onca_terminal" }
onca_logging = { path = "crates/onca_logging" }
onca_window = { path = "crates/onca_window" }
onca_hid = { path = "crates/onca_hid" }
onca_input = { path = "crates/onca_input" }
onca_parser_utils = { path = "crates/onca_parser_utils" }
onca_toml = { path = "crates/onca_toml" }
onca_ral = { path = "crates/onca_ral" }
onca_ral_dx12 = { path = "crates/onca_ral_dx12" }
onca_ral_vulkan = { path = "crates/onca_ral_vulkan" }
onca_ral_software = { path = "crates/onca_ral_software" }

[target."cfg(windows)".dependencies]
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_System_Kernel", "Win32_System_Threading", "Win32_Security"] }
onca_windows_utils = { path = "crates/onca_windows_utils" }

[build-dependencies]
embed-manifest = "1.3.1"
copy_to_output = "2.0.0"

[profile.opt-dev]
inherits = "dev"
opt-level = 1
debug = 2
debug-assertions = true
lto = "thin"
panic = "unwind"
overflow-checks = true