[package]
name = "onca"
version = "0.1.0"
edition = "2021"
authors = [ "TheJelmega" ]
description = "Game engine in rust"
readme = "readme.md"
repository = "https://github.com/TheJelmega/onca-rs"
license = "Apache 2.0"
keywords = [ "gamedev", "graphics", "engine", "game", "onca" ]
categories = ["game-engines", "graphics", "gui", "rendering"]

# temporary
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [ "crates/*" ]

[dependencies]
# sub-crates
onca_base = { path = "crates/onca_base" }
onca_math = { path = "crates/onca_math" }
onca_common_macros = { path = "crates/onca_common_macros" }
onca_common = { path = "crates/onca_common" }
onca_fs = { path = "crates/onca_fs" }
onca_terminal = { path = "crates/onca_terminal" }
onca_logging = { path = "crates/onca_logging" }
onca_window = { path = "crates/onca_window" }
onca_hid = { path = "crates/onca_hid" }
onca_input = { path = "crates/onca_input"}
onca_unicode_info = { path = "crates/onca_unicode_info" }
onca_regex = { path = "crates/onca_regex" }
onca_parser_utils = { path = "crates/onca_parser_utils" }
onca_toml = { path = "crates/onca_toml" }
onca_ral = { path = "crates/onca_ral" }
onca_ral_dx12 = { path = "crates/onca_ral_dx12" }
onca_ral_vulkan = { path = "crates/onca_ral_vulkan" }
onca_ral_software = { path = "crates/onca_ral_software" }
onca_asset_system = { path = "crates/onca_asset_system" }

# plugins

[target."cfg(windows)".dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_System_Kernel", "Win32_System_Threading", "Win32_Security"] }
onca_windows_utils = { path = "crates/onca_windows_utils" }

[build-dependencies]
embed-manifest = "1.3.1"
copy_to_output = "2.0.0"

[profile.opt-dev]
inherits = "dev"
opt-level = 1
debug = 2
debug-assertions = true
lto = "thin"
panic = "unwind"
overflow-checks = true
