[package]
name = "onca_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Link onca_malloc for tests
build = "../../build_with_malloc.rs"

[features]
default = ["memory_tracking", "cached_interned_strings"]
memory_tracking = []
cached_interned_strings = []

[dependencies]
onca_common_macros = { path = "../onca_common_macros" }
onca_malloc = { path = "../onca_malloc"}

once_cell = "1.12.0"
cfg-if = "1.0.0"
scopeguard = "1.1.0"
parking_lot = "0.12.1"
static_assertions = "1.1.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.51.1", features = [
        "Win32_Foundation",
        "Win32_System_WindowsProgramming",
        "Win32_System_Kernel",
        "Win32_System_Threading",
        "Win32_Security",
        "Win32_System_LibraryLoader",
        "Win32_System_SystemServices",
        "Win32_System_SystemInformation",
        "Win32_System_Rpc",
        "Win32_Globalization",
        "Win32_System_Console",
        "Win32_System_Ole"
    ] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "hash"
harness = false