[package]
name = "onca_fs"
version = "0.1.0"
edition = "2021"

# Link onca_malloc for tests
build = "../../build_with_malloc.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onca_common = { path = "../onca_common" }
onca_common_macros = { path = "../onca_common_macros" }
cfg-if = "1.0.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_NetworkManagement_NetManagement", # for UNLEN
] }
