[package]
name = "onca_hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onca_core_macros = { path = "../onca_core_macros" }
onca_core = { path = "../onca_core" }
onca_logging = { path = "../onca_logging" }
cfg-if = "1.0.0"


[target."cfg(windows)".dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_TextServices",
    "Win32_Storage"
] }