[package]
name = "onca_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onca_base = { path = "../onca_base" }
onca_common_macros = { path = "../onca_common_macros" }
onca_common = { path = "../onca_common" }
onca_logging = { path = "../onca_logging" }
onca_math = { path = "../onca_math" }
onca_window = { path = "../onca_window" }
onca_hid = { path = "../onca_hid" }
onca_toml = { path = "../onca_toml" }
cfg-if = "1.0.0"

[features]
raw_input_logging = []
mouse_pos_logging = []

[target."cfg(windows)".dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_TextServices",
    "Win32_UI_Input",
    "Win32_UI_Input_XboxController",
] }
onca_windows_utils = { path = "../onca_windows_utils" }
windows-targets = "0.52.0"
