[package]
name = "onca_logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onca_common = { path = "../onca_common" }
onca_common_macros = { path = "../onca_common_macros" }

# Should eventually be removed, maybe when we have an stdout that's io::Write
onca_terminal = { path = "../onca_terminal" }