[package]
name = "onca_ral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onca_common = { path = "../onca_common" }
onca_common_macros = { path = "../onca_common_macros" }
onca_logging = { path = "../onca_logging" }
onca_toml = { path = "../onca_toml" }
onca_window = { path = "../onca_window" }
static_assertions = "1.1.0"

[features]
default = ["validation"]

# Validation adds additional checks for programming/usage mistakes, at the cost of perfomance
validation = []