[package]
name = "onca_ral_dx12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
onca_core = { path = "../onca_core" }
onca_logging = { path = "../onca_logging" }
onca_ral = { path = "../onca_ral" }

windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12"
]}
