[package]
name = "onca_simd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onca_simd_macros = { path = "../onca_simd_macros" }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["real_blackbox"] }
rand = "0.8.5"

[lib]
bench = true

[[bench]]
name = "arith_bench"
harness = false