[package]
name = "onca_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onca_core = { path = "../onca_core" }
onca_core_macros = { path = "../onca_core_macros" }
cfg-if = "1.0.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
    ] }