[package]
name = "onca_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onca_common = { path = "../onca_common" }
onca_common_macros = { path = "../onca_common_macros" }
cfg-if = "1.0.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
    ] }